--- a/templates/main.html
+++ b/templates/main.html
@@ -16,6 +16,9 @@
   <!-- Compiled and minified JavaScript for Chart -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.min.js"></script>
 
+  <!-- Icons -->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
   <!-- Custom css -->
   <link rel="stylesheet" href="static/style.css">
 
@@ -26,11 +29,10 @@
 <body>
   <nav>
     <div class="nav-wrapper">
-      <a href="#" class="brand-logo">Pico</a>
+      <a href="#" class="brand-logo title">Pico</a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="sass.html">Sass</a> blue-text text-darken-2</li>
-        <li><a href="badges.html">Components</a></li>
-        <li><a href="collapsible.html">JavaScript</a></li>
+        <li> <i class="large material-icons head-button">pause_circle_outline</i></li>
+        <li> <i class="large material-icons head-button">power_settings_new</i></li>
       </ul>
     </div>
   </nav>
@@ -142,19 +144,25 @@
         <table class="responsive-table">
           <tbody>
             <tr class="recipe">
-              <td class="recipe-name">+ Dark IPA</td>
+              <td class="td-delete"> <i class="material-icons delete-button">delete</i></td>
+              <td class="recipe-name">Dark IPA</td>
               <td class="recipe-step">Boil</td>
               <td class="recipe-time">25m 10s</td>
+              <td> <i class="small material-icons">pause</i></td>
             </tr>
-            <tr>
-              <td class="recipe-name">+ Bitter</td>
+            <tr class="recipe">
+              <td class="td-delete"> <i class="material-icons delete-button">delete</i></td>
+              <td class="recipe-name">Bitter</td>
               <td class="recipe-step">Malt - first</td>
               <td class="recipe-time">30m 45s</td>
+              <td> <i class="small material-icons">pause</i></td>
             </tr>
-            <tr>
-              <td class="recipe-name">+ Stout</td>
+            <tr class="recipe">
+              <td class="td-delete"> <i class="material-icons delete-button">delete</i></td>
+              <td class="recipe-name">Stout</td>
               <td class="recipe-step">Hot</td>
               <td class="recipe-time">NA</td>
+              <td> <i class="small material-icons">pause</i></td>
             </tr>
           </tbody>
         </table>
@@ -243,7 +251,7 @@
                     Off
                     <input type="checkbox">
                     <span class="lever"></span>
-                    On
+                    <span>On</span>
                   </label>
                 </td>
               </tr>
@@ -269,23 +277,45 @@
                   </label>
                 </td>
               </tr>
-              <tr class="resistor">
-                <td class="resistor-name">Out</td>
-                <td class="resistor-actuator">
-                  <label>
-                    Off
-                    <input type="checkbox">
-                    <span class="lever"></span>
-                    On
-                  </label>
-                </td>
-              </tr>
             </tbody>
           </table>
 
         </div>
       </div>
     </div>
+
+
+    <!-- Pump card -->
+    <div class="col s4">
+      <div class="card ">
+        <div class="card-content">
+          <span class="card-title">Pump</span>
+        </div>
+        <div class="switch">
+          <label>
+            Off
+            <input type="checkbox">
+            <span class="lever"></span>
+            On
+          </label>
+        </div>
+      </div>
+    </div>
+
+    <!-- Power card -->
+    <div class="col s8">
+      <div class="card ">
+        <div class="card-content">
+          <span class="card-title">Power</span>
+        </div>
+        <div class="card-power"> <span id="hot-power"> hot: 500W </span><span id="malt-power"> malt: 1520W </span><span id="boil-power"> boil: 800W </span></div>
+        <div class="card-power-chart">
+          <canvas id="power-canvas" width="1100" height="480"></canvas>
+        </div>
+      </div>
+    </div>
+
+
 
   </div>
 </div>
@@ -377,6 +407,38 @@
     ]
   }
   chart_fill('volume-canvas', Data);
+
+  Data = {
+    labels : ["16:00","16:05","16:10","16:15","16:20","16:25"],
+    datasets : [
+      {
+        label: "Malt Power",
+        //fillColor : "#ffecb3",
+        fillColor : "transparent",
+  			strokeColor : "#ff6f00",
+  			pointColor : "#fff",
+  			pointStrokeColor : "#ff6f00",
+        data: [1100, 1200, 1300, 1640, 1480, 1400, 1520]
+      },
+      {
+        label: "Hot Power",
+        fillColor : "transparent",
+  			strokeColor : "#01579b",
+  			pointColor : "#fff",
+  			pointStrokeColor : "#01579b",
+        data : [600,520,550,480,450,500]
+      },
+      {
+        label: "Boil Power",
+        fillColor : "transparent",
+        strokeColor : "#b71c1c",
+        pointColor : "#fff",
+        pointStrokeColor : "#b71c1c",
+        data: [600, 400, 1000, 600, 500, 900, 800]
+      }
+    ]
+  }
+  chart_fill('power-canvas', Data);
 
 
 </script>
