add some margin for power graph

--- a/static/style.css
+++ b/static/style.css
@@ -124,6 +124,10 @@ label.waiting {
 }
 
 /*resistor*/
+.card-resistor {
+    margin-bottom: 52px;
+}
+
 .resistor-name {
   font-size: 18px;
   margin-right: 200px;
