reorganize template into several files

--- a/templates/main.html
+++ b/templates/main.html
@@ -41,388 +41,16 @@
 
   <div class="row" style="margin-top:60px">
 
-    <!-- Temperature cards -->
-    <!-- hot tank -->
-    <div class="col m4"  >
-      <div class="card" id="hot-card">
-        <div class="card-content">
-          <span class="card-title">Hot tank</span>
-        </div>
-        <div class="card-temperature"> 70 °C</div>
-        <div class="card-temperature-chart">
-        </div>
-        <canvas id="hot-canvas" width="550" height="150"></canvas>
-        <div class="card-action">
-          <a href="#">More History</a>
-        </div>
-      </div>
-    </div>
-
-    <!-- malt tank -->
-    <div class="col m4"  >
-      <div class="card" id="malt-card">
-        <div class="card-content">
-          <span class="card-title">Malt tank</span>
-        </div>
-        <div class="card-temperature"> 78 °C</div>
-        <div class="card-temperature-chart">
-          <canvas id="malt-canvas" width="550" height="150"></canvas>
-        </div>
-        <div class="card-action">
-          <a href="#">More History</a>
-        </div>
-      </div>
-    </div>
-
-    <!-- boil tank -->
-    <div class="col m4">
-      <div class="card" id="boil-card">
-        <div class="card-content">
-          <span class="card-title">Boil tank</span>
-        </div>
-        <div class="card-temperature"> 98 °C</div>
-        <div class="card-temperature-chart">
-          <canvas id="boil-canvas" width="550" height="150"></canvas>
-        </div>
-        <div class="card-action">
-          <a href="#">More History</a>
-        </div>
-      </div>
-    </div>
-
-    <!-- Volumes card -->
-    <div class="col s8">
-      <div class="card ">
-        <div class="card-content">
-
-
-          <span class="card-title">Tank volumes</span>
-        </div>
-        <div class="card-volume"> <span id="hot-volume"> hot: 50L </span><span id="malt-volume"> malt: 30L </span><span id="boil-volume"> boil: 20L </span></div>
-        <div class="card-volume-chart">
-          <canvas id="volume-canvas" width="1100" height="480"></canvas>
-        </div>
-        <div class="card-action">
-          <!-- Modal Trigger -->
-          <a class="waves-effect waves-light btn modal-trigger  action-verb" href="#modal-tank">Define</a>
-
-          <!-- Modal Structure -->
-          <div id="modal-tank" class="modal">
-            <div class="modal-content volume-form">
-              <h4 class="modal-tank-title">Define tank volumes</h4>
-                <div class="col s12">
-                  Please measure the volume in the tank and report it
-                </div>
-              <div class=" input-field col s4">
-                  <select name="hot" >
-                    <option value="0" selected>0 Liter</option>
-                    <option value="5">5 Liters</option>
-                    <option value="10">10 Liters</option>
-                    <option value="15">15 Liters</option>
-                    <option value="20">20 Liter</option>
-                    <option value="25">25 Liters</option>
-                    <option value="30">30 Liters</option>
-                    <option value="35">35 Liters</option>
-                    <option value="40">40 Liter</option>
-                    <option value="45">45 Liters</option>
-                    <option value="50">50 Liters</option>
-                  </select>
-                <label>Hot tank</label>
-              </div>
-              <div class=" input-field col s4">
-                  <select name="malt" >
-                    <option value="0" selected>0 Liter</option>
-                    <option value="5">5 Liters</option>
-                    <option value="10">10 Liters</option>
-                    <option value="15">15 Liters</option>
-                    <option value="20">20 Liter</option>
-                    <option value="25">25 Liters</option>
-                    <option value="30">30 Liters</option>
-                    <option value="35">35 Liters</option>
-                    <option value="40">40 Liter</option>
-                    <option value="45">45 Liters</option>
-                    <option value="50">50 Liters</option>
-                  </select>
-                <label>Malt tank</label>
-              </div>
-              <div class=" input-field col s4">
-                  <select name="boil" >
-                    <option value="0" selected>0 Liter</option>
-                    <option value="5">5 Liters</option>
-                    <option value="10">10 Liters</option>
-                    <option value="15">15 Liters</option>
-                    <option value="20">20 Liter</option>
-                    <option value="25">25 Liters</option>
-                    <option value="30">30 Liters</option>
-                    <option value="35">35 Liters</option>
-                    <option value="40">40 Liter</option>
-                    <option value="45">45 Liters</option>
-                    <option value="50">50 Liters</option>
-                  </select>
-                <label>Boil tank</label>
-              </div>
-            </div>
-            <div class="modal-footer">
-              <button class="btn waves-effect waves-light modal-close modal-action" type="submit" name="action">Submit
-                <i class="material-icons right">send</i>
-              </button>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Next steps card -->
-    <div class="col s4">
-      <div class="card task">
-        <div class="card-content">
-          <span class="card-title">Next steps</span>
-        </div>
-        <form action="#">
-          <p>
-            <input type="checkbox" class="filled-in" id="check0" checked="checked" />
-            <label for="check0" class="done">Fill in malt for Dark IPA</label>
-          </p>
-          <p>
-            <input type="checkbox" class="filled-in" id="check1" />
-            <label for="check1" class="waiting">Fill in malt for Bitter</label>
-          </p>
-          <p>
-            <input type="checkbox" id="check2" disabled="disabled" />
-            <label for="check2" class="unavailable">Chill out Dark IPA</label>
-          </p>
-          <p>
-            <input type="checkbox" id="check3" disabled="disabled" />
-            <label for="check3" class="unavailable">Fill in Stout</label>
-          </p>
-        </form>
-        <div class="add-task">
-          <a class="btn-floating btn-large waves-effect waves-light red modal-trigger" href="#modal-add-task"><i class="material-icons" style="font-style: normal;">+</i></a>
-
-          <div id="modal-add-task" class="modal">
-            <div class="modal-content">
-              <h4>Add a task</h4>
-              <p>Define a task</p>
-
-              <div class="row input-task">
-                <form class="col s12">
-                  <div class="row">
-                    <div class="s3 col">
-                      <select name="boil" >
-                        <option value="0" selected>0 min</option>
-                        <option value="5">5 min</option>
-                        <option value="10">10 min</option>
-                        <option value="15">15 min</option>
-                        <option value="20">20 min</option>
-                        <option value="25">25 min</option>
-                        <option value="30">30 min</option>
-                        <option value="35">35 min</option>
-                        <option value="40">40 min</option>
-                        <option value="45">45 min</option>
-                        <option value="50">50 min</option>
-                      </select>
-                    <label>Boil tank</label>
-                    </div>
-                    <div class="input-field col s9">
-                      <textarea id="textarea1" class="materialize-textarea"></textarea>
-                      <label for="textarea1">Define your task</label>
-                    </div>
-                  </div>
-                </form>
-              </div>
-
-            </div>
-            <div class="modal-footer">
-              <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
-            </div>
-          </div>
-
-
-        </div>
-      </div>
-    </div>
-
-    <!-- Recipes card -->
-    <div class="col s4">
-      <div class="card ">
-        <div class="card-content">
-          <span class="card-title">Recipes</span>
-        </div>
-        <table class="responsive-table">
-          <tbody>
-            <tr class="recipe">
-              <td class="td-delete"> <i class="material-icons delete-button">delete</i></td>
-              <td class="recipe-name">Dark IPA</td>
-              <td class="recipe-step">Boil</td>
-              <td class="recipe-time">25m 10s</td>
-              <td> <i class="small material-icons">pause</i></td>
-            </tr>
-            <tr class="recipe">
-              <td class="td-delete"> <i class="material-icons delete-button">delete</i></td>
-              <td class="recipe-name">Bitter</td>
-              <td class="recipe-step">Malt - first</td>
-              <td class="recipe-time">30m 45s</td>
-              <td> <i class="small material-icons">pause</i></td>
-            </tr>
-            <tr class="recipe">
-              <td class="td-delete"> <i class="material-icons delete-button">delete</i></td>
-              <td class="recipe-name">Stout</td>
-              <td class="recipe-step">Hot</td>
-              <td class="recipe-time">NA</td>
-              <td> <i class="small material-icons">pause</i></td>
-            </tr>
-          </tbody>
-        </table>
-        <span class="edit">
-          <a href="#"><img src="static/icons/edit.png" width=28px/></a>
-        </span>
-        <span class="add-task">
-          <a class="btn-floating btn-large waves-effect waves-light red"><i class="material-icons" style="font-style: normal;">+</i></a>
-        </span>
-      </div>
-    </div>
-
-    <!-- valve card -->
-    <div class="col s4">
-      <div class="card ">
-        <div class="card-content">
-          <span class="card-title">Valves</span>
-        </div>
-        <div class="card-valve switch">
-          <table class="responsive-table">
-            <tbody>
-              <tr class="valve">
-                <td class="valve-name">Hot</td>
-                <td class="valve-actuator">
-                  <label>
-                    Off
-                    <input type="checkbox">
-                    <span class="lever"></span>
-                    On
-                  </label>
-                </td>
-              </tr>
-              <tr class="valve">
-                <td class="valve-name">Malt</td>
-                <td class="valve-actuator">
-                  <label>
-                    Off
-                    <input type="checkbox">
-                    <span class="lever"></span>
-                    On
-                  </label>
-                </td>
-              </tr>
-              <tr class="valve">
-                <td class="valve-name">Boil</td>
-                <td class="valve-actuator">
-                  <label>
-                    Off
-                    <input type="checkbox">
-                    <span class="lever"></span>
-                    On
-                  </label>
-                </td>
-              </tr>
-              <tr class="valve">
-                <td class="valve-name">Out</td>
-                <td class="valve-actuator">
-                  <label>
-                    Off
-                    <input type="checkbox">
-                    <span class="lever"></span>
-                    On
-                  </label>
-                </td>
-              </tr>
-            </tbody>
-          </table>
-
-        </div>
-      </div>
-    </div>
-
-    <!-- Resistor card -->
-    <div class="col s4">
-      <div class="card ">
-        <div class="card-content">
-          <span class="card-title">Resistors</span>
-        </div>
-        <div class="card-resistor switch">
-          <table class="responsive-table">
-            <tbody>
-              <tr class="valve">
-                <td class="resistor-name">Hot</td>
-                <td class="resistor-actuator">
-                  <label>
-                    Off
-                    <input type="checkbox">
-                    <span class="lever"></span>
-                    <span>On</span>
-                  </label>
-                </td>
-              </tr>
-              <tr class="resistor">
-                <td class="resistor-name">Malt</td>
-                <td class="resistor-actuator">
-                  <label>
-                    Off
-                    <input type="checkbox">
-                    <span class="lever"></span>
-                    On
-                  </label>
-                </td>
-              </tr>
-              <tr class="resistor">
-                <td class="resistor-name">Boil</td>
-                <td class="resistor-actuator">
-                  <label>
-                    Off
-                    <input type="checkbox">
-                    <span class="lever"></span>
-                    On
-                  </label>
-                </td>
-              </tr>
-            </tbody>
-          </table>
-
-        </div>
-      </div>
-    </div>
-
-
-    <!-- Pump card -->
-    <div class="col s4">
-      <div class="card ">
-        <div class="card-content">
-          <span class="card-title">Pump</span>
-        </div>
-        <div class="switch">
-          <label>
-            Off
-            <input type="checkbox">
-            <span class="lever"></span>
-            On
-          </label>
-        </div>
-      </div>
-    </div>
-
-    <!-- Power card -->
-    <div class="col s8">
-      <div class="card ">
-        <div class="card-content">
-          <span class="card-title">Power</span>
-        </div>
-        <div class="card-power"> <span id="hot-power"> hot: 500W </span><span id="malt-power"> malt: 1520W </span><span id="boil-power"> boil: 800W </span></div>
-        <div class="card-power-chart">
-          <canvas id="power-canvas" width="1100" height="480"></canvas>
-        </div>
-      </div>
-    </div>
-
-
+    {% include 'cards/temperature_hot.html' %}
+    {% include 'cards/temperature_malt.html' %}
+    {% include 'cards/temperature_boil.html' %}
+    {% include 'cards/volume.html' %}
+    {% include 'cards/next_steps.html' %}
+    {% include 'cards/recipe.html' %}
+    {% include 'cards/valve.html' %}
+    {% include 'cards/resistor.html' %}
+    {% include 'cards/pump.html' %}
+    {% include 'cards/power.html' %}
 
   </div>
 </div>
