--- a/templates/cards/temperature_boil.html
+++ b/templates/cards/temperature_boil.html
@@ -4,7 +4,7 @@
     <div class="card-content">
       <span class="card-title">Boil tank</span>
     </div>
-    <div class="card-temperature"> 99 °C</div>
+    <div class="card-temperature" id="boil-temperature"> </div>
     <div class="card-temperature-chart">
       <canvas id="boil-canvas" width="550" height="150"></canvas>
     </div>
