--- a/templates/cards/temperature_hot.html
+++ b/templates/cards/temperature_hot.html
@@ -5,7 +5,7 @@
     <div class="card-content">
       <span class="card-title">Hot tank</span>
     </div>
-    <div class="card-temperature"> 72 °C</div>
+    <div class="card-temperature" id="hot-temperature"> </div>
     <div class="card-temperature-chart">
     </div>
     <canvas id="hot-canvas" width="550" height="150"></canvas>
