--- a/templates/cards/temperature_mash.html
+++ b/templates/cards/temperature_mash.html
@@ -1,12 +1,12 @@
 <!-- malt tank -->
 <div class="col m4"  >
-  <div class="card" id="malt-card">
+  <div class="card" id="mash-card">
     <div class="card-content">
       <span class="card-title">Malt tank</span>
     </div>
-    <div class="card-temperature"> 77 °C</div>
+    <div class="card-temperature" id="mash-temperature"></div>
     <div class="card-temperature-chart">
-      <canvas id="malt-canvas" width="550" height="150"></canvas>
+      <canvas id="mash-canvas" width="550" height="150"></canvas>
     </div>
     <div class="card-action">
       <a href="#">More History</a>
