--- a/templates/cards/next_steps.html
+++ b/templates/cards/next_steps.html
@@ -4,8 +4,8 @@
     <div class="card-content">
       <span class="card-title">Next steps</span>
     </div>
-    <form action="#">
-      <p>
+    <form action="#" id="task-form">
+      <!-- <p>
         <input type="checkbox" class="filled-in" id="check0" checked="checked" />
         <label for="check0" class="done">Fill in malt for Dark IPA</label>
       </p>
@@ -20,7 +20,7 @@
       <p>
         <input type="checkbox" id="check3" disabled="disabled" />
         <label for="check3" class="unavailable">Fill in Stout</label>
-      </p>
+      </p> -->
     </form>
     <div class="add-task">
       <a class="btn-floating btn-large waves-effect waves-light red modal-trigger" href="#modal-add-task"><i class="material-icons" style="font-style: normal;">+</i></a>
