recipe card on ajax

--- a/templates/cards/recipe.html
+++ b/templates/cards/recipe.html
@@ -5,9 +5,9 @@
         <div class="card-content">
           <span class="card-title">Recipes</span>
         </div>
-        <table class="responsive-table">
+        <table class="responsive-table" id="recipe-table">
           <tbody>
-            <tr class="recipe">
+            <!-- <tr class="recipe">
               <td class="td-delete"> <i class="material-icons delete-button">delete</i></td>
               <td class="recipe-name">Dark IPA</td>
               <td class="recipe-step">Boil</td>
@@ -27,7 +27,7 @@
               <td class="recipe-step">Hot</td>
               <td class="recipe-time">NA</td>
               <td> <i class="small material-icons">pause</i></td>
-            </tr>
+            </tr> -->
           </tbody>
         </table>
         <span class="edit">
