ajax on switches

--- a/templates/cards/pump.html
+++ b/templates/cards/pump.html
@@ -7,7 +7,7 @@
     <div class="switch">
       <label>
         Off
-        <input type="checkbox">
+        <input type="checkbox" id="switch-pump">
         <span class="lever"></span>
         On
       </label>
