--- a/templates/cards/resistor.html
+++ b/templates/cards/resistor.html
@@ -12,7 +12,7 @@
             <td class="resistor-actuator">
               <label>
                 Off
-                <input type="checkbox">
+                <input type="checkbox"  id="switch-resistor-hot">
                 <span class="lever"></span>
                 <span>On</span>
               </label>
@@ -23,7 +23,7 @@
             <td class="resistor-actuator">
               <label>
                 Off
-                <input type="checkbox">
+                <input type="checkbox"  id="switch-resistor-mash">
                 <span class="lever"></span>
                 On
               </label>
@@ -34,7 +34,7 @@
             <td class="resistor-actuator">
               <label>
                 Off
-                <input type="checkbox">
+                <input type="checkbox"  id="switch-resistor-boil">
                 <span class="lever"></span>
                 On
               </label>
