--- a/templates/cards/valve.html
+++ b/templates/cards/valve.html
@@ -12,7 +12,7 @@
             <td class="valve-actuator">
               <label>
                 Off
-                <input type="checkbox">
+                <input type="checkbox" id="switch-valve-hot">
                 <span class="lever"></span>
                 On
               </label>
@@ -23,7 +23,7 @@
             <td class="valve-actuator">
               <label>
                 Off
-                <input type="checkbox">
+                <input type="checkbox" id="switch-valve-mash">
                 <span class="lever"></span>
                 On
               </label>
@@ -34,18 +34,7 @@
             <td class="valve-actuator">
               <label>
                 Off
-                <input type="checkbox">
-                <span class="lever"></span>
-                On
-              </label>
-            </td>
-          </tr>
-          <tr class="valve">
-            <td class="valve-name">Out</td>
-            <td class="valve-actuator">
-              <label>
-                Off
-                <input type="checkbox">
+                <input type="checkbox" id="switch-valve-boil">
                 <span class="lever"></span>
                 On
               </label>
