--- a/static/style.css
+++ b/static/style.css
@@ -15,6 +15,9 @@
   margin-right: 20px;
   margin-bottom: 10px;
 }
+.card .lock {
+  float: right;
+}
 
 /* head */
 .title {
@@ -153,4 +156,5 @@ label.waiting {
   top: inherit !important;
   bottom: 20px !important;
   left: 0px !important;
+  /*width: 200px !important;*/
 }
