--- a/templates/cards/valve.html
+++ b/templates/cards/valve.html
@@ -3,6 +3,9 @@
   <div class="card ">
     <div class="card-content">
       <span class="card-title">Valves</span>
+      <span class="card-lock">
+        <i class="lock material-icons">lock_outline</i>
+      </span>
     </div>
     <div class="card-valve switch">
       <table class="responsive-table">
