lock for several card

--- a/templates/cards/pump.html
+++ b/templates/cards/pump.html
@@ -1,8 +1,11 @@
 <!-- Pump card -->
 <div class="col s4">
-  <div class="card ">
+  <div class="card" id="card-pump">
     <div class="card-content">
       <span class="card-title">Pump</span>
+      <span class="card-lock">
+        <i class="lock material-icons">lock_outline</i>
+      </span>
     </div>
     <div class="switch">
       <label>
