--- a/templates/cards/resistor.html
+++ b/templates/cards/resistor.html
@@ -1,8 +1,11 @@
 <!-- Resistor card -->
 <div class="col s4">
-  <div class="card ">
+  <div class="card "  id="card-resistor">
     <div class="card-content">
       <span class="card-title">Resistors</span>
+      <span class="card-lock">
+        <i class="lock material-icons">lock_outline</i>
+      </span>
     </div>
     <div class="card-resistor switch">
       <table class="responsive-table">
