--- a/templates/cards/valve.html
+++ b/templates/cards/valve.html
@@ -1,6 +1,6 @@
 <!-- valve card -->
 <div class="col s4">
-  <div class="card ">
+  <div class="card" id="card-valve">
     <div class="card-content">
       <span class="card-title">Valves</span>
       <span class="card-lock">
