add lock for several cards

--- a/templates/cards/valve.html
+++ b/templates/cards/valve.html
@@ -4,7 +4,7 @@
     <div class="card-content">
       <span class="card-title">Valves</span>
       <span class="card-lock">
-        <i class="lock material-icons">lock_outline</i>
+        <i class="lock material-icons" id="valve-lock">lock_outline</i>
       </span>
     </div>
     <div class="card-valve switch">
